--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body {
     font-family: 'Figtree-blod';
 }
 
-@media (min-width: 769px) {
+/* @media (min-width: 769px) {
     .blog--card {
         width: 384px;
     }
@@ -137,4 +137,4 @@ body {
     .author h5 {
         font-size: 16px;
     }
-}
+} */
